etc/repkg: vim: Remove CVE-2017-1000382 workaround
I'm not sure if there is any better workaround for this, but in any case
*this* workaround annoys people who set `directory` on their own.

--- a/etc/repkg/rules.conf
+++ b/etc/repkg/rules.conf
@@ -15,6 +15,9 @@ dash add-provide sh
 # The "base-devel" group is a meta-package in the zuepfe repos
 pacman add-optdepend base-devel: for building packages with makepkg
 
+# We don't like applications hardcoding dotfiles in the user's home
+vim-runtime apply vim-swap.patch /usr/share/vim/vimfiles/archlinux.vim
+
 
 # BUG FIXES ====================================================================
 
